miniconf/tests/ui/skip-unnamed.stderr
error: Can only `skip` terminal tuple struct fields
 --> tests/ui/skip-unnamed.rs:4:21
  |
4 | pub struct S(#[tree(skip)] i32, i32);
  |                     ^^^^

error: Can only `skip` terminal tuple variant fields
 --> tests/ui/skip-unnamed.rs:8:14
  |
8 |     A(#[tree(skip)] i32, i32),
  |              ^^^^
